pages/page.css
body {
    font-family: Palatino, 'Palatino Linotype', 'Hoefler Text', Times, 'Times New Roman', serif;
    padding: 0;
    margin: 0;
}


#container {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 90%; 
    height: 100%;
    margin: 0 auto;
    margin-left: 10%;
    overflow: visible;
}

#description {
    position: absolute;
    padding-left: 1em;
    text-align: justify;
    top: 0px;
    width: 20%;
    background: rgba(200,200,200,0.10);
    padding: 0.5em;
}

#links {
    position: absolute;
    right: 0.5em;
    bottom: 0.5em;
    height: 1em;
    padding: 0.5em;
    background: steelblue;
}

#links a {
    color: white;
    text-decoration: none;
}

#links a:hover {
    color: steelblue;
    background: white;
}

svg {
    overflow: visible;
}

.link-a {
    fill: none;
}

.link-b {
    fill: none;
}

.node-text {
    fill: #000;
}

